tests/errors/types/004.ura
// errors/types/004 — type mismatch in assignment
use "@/header"

main():
    x int = "hello"
    output(x, "\n")
