tests/errors/types/004.err
[1m[0;31merror: [0mtype mismatch: cannot assign CHARS to INT
  [1m[34m-->[0m src/tests/errors/types/004.ura:5:11
  [1m[34m|[0m
[1m[34m5 |[0m     x int = "hello"
  [1m[34m|[0m           [1;31m^[0m
